--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -27,6 +27,337 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "! git clone https://github.com/KaranRawatUVA/wrangling/"
+      ],
+      "metadata": {
+        "id": "QR6rmf_aLlUz",
+        "outputId": "1d9bc3ec-af4a-4ef3-eb3f-5bf3e067af48",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "QR6rmf_aLlUz",
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: destination path 'wrangling' already exists and is not an empty directory.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import os\n",
+        "current_directory = os.getcwd()\n",
+        "print(current_directory)\n"
+      ],
+      "metadata": {
+        "id": "yJrRCEfHK3QU",
+        "outputId": "8f850424-33d2-43e8-aaa1-27358dcc0a52",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "yJrRCEfHK3QU",
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Numeric variable: For `./data/airbnb_hw.csv`, clean the `Price` variable as well as you can, and explain the choices you make. How many missing values do you end up with? (Hint: What happens to the formatting when a price goes over 999 dollars, say from 675 to 1,112?)\n",
+        "\n",
+        "\n",
+        "I first got rid of all the commas by replacing it with an empty string and changing it into a float\n",
+        "\n",
+        "Then I changed every value from s string into a numeric value.\n",
+        "\n",
+        "I did not end up with any missing values"
+      ],
+      "metadata": {
+        "id": "PDkMJ3wJKS6J"
+      },
+      "id": "PDkMJ3wJKS6J"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dfAir = pd.read_csv('/content/wrangling/assignment/data/airbnb_hw.csv')\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "dfAir['Price'] = dfAir['Price'].str.replace(',', '').astype(float)\n",
+        "#all I did was repalce an commas with an empty string, to get rid of the commas\n",
+        "\n",
+        "#dfAir['Price'].values.tolist()\n",
+        "\n",
+        "\n",
+        "pd.to_numeric(dfAir['Price'], errors='raise') # I changed every value into a numeric value\n",
+        "\n",
+        "\n",
+        "dfAir = dfAir.sort_values(by='Price', ascending=False)\n",
+        "dfAir['Price']\n",
+        "\n",
+        "# I ended up with 0 missing values"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 458
+        },
+        "id": "7Ggw6jA-KXNP",
+        "outputId": "6a037e4c-afc2-43b3-e283-36766453771c"
+      },
+      "id": "7Ggw6jA-KXNP",
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "23927    10000.0\n",
+              "4002      8000.0\n",
+              "17900     6500.0\n",
+              "2405      5999.0\n",
+              "24136     5000.0\n",
+              "          ...   \n",
+              "9793        20.0\n",
+              "18209       20.0\n",
+              "30087       10.0\n",
+              "19275       10.0\n",
+              "3120        10.0\n",
+              "Name: Price, Length: 30478, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Price</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>23927</th>\n",
+              "      <td>10000.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4002</th>\n",
+              "      <td>8000.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17900</th>\n",
+              "      <td>6500.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2405</th>\n",
+              "      <td>5999.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>24136</th>\n",
+              "      <td>5000.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9793</th>\n",
+              "      <td>20.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18209</th>\n",
+              "      <td>20.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>30087</th>\n",
+              "      <td>10.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>19275</th>\n",
+              "      <td>10.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3120</th>\n",
+              "      <td>10.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>30478 rows × 1 columns</p>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. Categorical variable: For the Minnesota police use of for data, `./data/mn_police_use_of_force.csv`, clean the `subject_injury` variable, handling the NA's; this gives a value `Yes` when a person was injured by police, and `No` when no injury occurred. What proportion of the values are missing? Is this a concern? Cross-tabulate your cleaned `subject_injury` variable with the `force_type` variable. Are there any patterns regarding when the data are missing?\n"
+      ],
+      "metadata": {
+        "id": "dy4sZYKINj7-"
+      },
+      "id": "dy4sZYKINj7-"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dfMP = pd.read_csv('/content/wrangling/assignment/data/mn_police_use_of_force.csv')\n",
+        "\n",
+        "dfMP['subject_injury'].head()"
+      ],
+      "metadata": {
+        "id": "yNfN1xupNiYG",
+        "outputId": "114bbb30-b860-4fe7-a924-ceb4466e2d5c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 241
+        }
+      },
+      "id": "yNfN1xupNiYG",
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    NaN\n",
+              "1    NaN\n",
+              "2    NaN\n",
+              "3    NaN\n",
+              "4    NaN\n",
+              "Name: subject_injury, dtype: object"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>subject_injury</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> object</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. Dummy variable: For the pretrial data covered in the lecture, clean the `WhetherDefendantWasReleasedPretrial` variable as well as you can, and, in particular, replace missing values with `np.nan`.\n"
+      ],
+      "metadata": {
+        "id": "CKmzCw1FNwu4"
+      },
+      "id": "CKmzCw1FNwu4"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "4l1_--wSNv3s"
+      },
+      "id": "4l1_--wSNv3s",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. Missing values, not at random: For the pretrial data covered in the lecture, clean the `ImposedSentenceAllChargeInContactEvent` variable as well as you can, and explain the choices you make. (Hint: Look at the `SentenceTypeAllChargesAtConvictionInContactEvent` variable.)"
+      ],
+      "metadata": {
+        "id": "h075_vkLNzLe"
+      },
+      "id": "h075_vkLNzLe"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "cXdPh9a8Nztd"
+      },
+      "id": "cXdPh9a8Nztd",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "id": "5a60a44e",
       "metadata": {
@@ -47,21 +378,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n"
-      ],
-      "metadata": {
-        "id": "8yd_2lXDkkv2"
-      },
-      "id": "8yd_2lXDkkv2",
-      "execution_count": 1,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "1. Open the shark attack file using Pandas. It is probably not a csv file, so `read_csv` won't work.\n"
@@ -76,13 +392,13 @@
       "source": [
         "# 1. Open the shark attack file using Pandas. It is probably not a csv file, so `read_csv` won't work.\n",
         "\n",
-        "df = pd.read_excel('GSAF5.xls')\n"
+        "df = pd.read_excel('/content/wrangling/data/GSAF5.xls')\n"
       ],
       "metadata": {
         "id": "aDtB64OXBlL_"
       },
       "id": "aDtB64OXBlL_",
-      "execution_count": 2,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -1093,10 +1409,10 @@
       ],
       "metadata": {
         "id": "UdgzetlHyvmU",
-        "outputId": "568d7084-c443-4914-9c75-e0bebd46ec4b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "568d7084-c443-4914-9c75-e0bebd46ec4b"
       },
       "id": "UdgzetlHyvmU",
       "execution_count": 45,
