--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -2831,6 +2831,20 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "1. The paper is about creating/using a framework on how to clean data so people can understand it easier.\n",
+        "\n",
+        "2. The tidy data standard is intended to accomplish a standardized way for data scientists to clean data, so all data sets are easy to read and are able to be read the same way.\n",
+        "\n",
+        "3."
+      ],
+      "metadata": {
+        "id": "98dCOHvP19-V"
+      },
+      "id": "98dCOHvP19-V"
+    },
+    {
+      "cell_type": "markdown",
       "id": "649494cd-cfd6-4f80-992a-9994fc19e1d5",
       "metadata": {
         "id": "649494cd-cfd6-4f80-992a-9994fc19e1d5"
