--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -334,7 +334,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 209
+          "height": 229
         },
         "id": "MjQtKDYKa5gP",
         "outputId": "7c589e7e-1eb7-4f90-a823-bb3deb203d70"
@@ -792,7 +792,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 423
+          "height": 443
         },
         "id": "cXdPh9a8Nztd",
         "outputId": "d2b430a5-5bc1-42e1-f282-c74506aca4f6"
@@ -2836,7 +2836,18 @@
         "\n",
         "2. The tidy data standard is intended to accomplish a standardized way for data scientists to clean data, so all data sets are easy to read and are able to be read the same way.\n",
         "\n",
-        "3."
+        "3. The first sentence means that each data set will have its own unique problems with it. Not every data set has the same problems. The second sentence means that it is easy to identify what are variables and observations after just looking at the data set. However, when asked to define each, it gets kind of messy because there isn't a real set definition for most people. They just pick it out of general ideas of what variables and observations are.\n",
+        "\n",
+        "4. Values are defined as usually quantitative and qualitative data in a data set. Every value is a variable or observation. Variables are \"values that measure the same underlying atrribute across all units. An observation are values \"measured on the same unit across attributes\".\n",
+        "\n",
+        "5. Tidy data is the standard way of mapping the meaning of a dataset of its structure. Tidy data has three rules: each variable forms a column, each observation forms a row, and each type of observational unity forms a table.\n",
+        "\n",
+        "6. The five most common problems with messy data sets are: Column headers are values, not variable names, multiple variables are stored in one column, variables are stored in both rows and columns, multiple types of observational units are stored in the same table, a single observational unit is stored in multiple tables. Table 4 is messy because there are many columns that describe the same thing: income. Melting a data set is to turn columns into row by taking columns and converting them into two variables: column which contains repeated column headings and a new variable called value that contains the concatenated datta values from the previusly sperate columns.\n",
+        "\n",
+        "7. Table 11 is messy and table 12 is molten and tidy because table 11's d1-31 columns describe all the same things, but are seperated into many different columns. Table 12 is molten because all of those colvars have been melten into one column: value. The molten table is not tidy becayse the element column contains names of variables. So, the tidy table fixes this by splitting the value variable into the names of the variables in the element column.\n",
+        "\n",
+        "8. The chicken-and-egg problem with focusing on tidy data is: if tidy data is only as useful as the tools that\n",
+        "work with it, then tidy tools will be inextricably linked to tidy data. Wichham hopes in the future that tidy data is not a \"false start\" and hopes   others will build on this framework to develop even better data storage strategies and better tools."
       ],
       "metadata": {
         "id": "98dCOHvP19-V"
