Added text which explain the story of the graph

--- a/lab/lab_notebook.ipynb
+++ b/lab/lab_notebook.ipynb
@@ -1471,12 +1471,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "jbGAl9ml1SOm",
-        "outputId": "6cb5fb3b-e1c1-475a-d742-3c4b7dbb0f6e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
-        }
+        },
+        "id": "jbGAl9ml1SOm",
+        "outputId": "6cb5fb3b-e1c1-475a-d742-3c4b7dbb0f6e"
       },
       "execution_count": 46,
       "outputs": [
@@ -1491,6 +1491,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Pixels have the highest average price of a phone brand with iPhone coming in second. This is after removing large outliers in price. Specifcally there was an outlier with an android phone where it was worth 10k which is much more then any other phone.\n"
+      ],
+      "metadata": {
+        "id": "_hBPpSyU7ZFy"
+      }
     },
     {
       "cell_type": "code",
@@ -1514,12 +1523,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "ZkajsSFs19xr",
-        "outputId": "7fb4316e-7683-4846-904c-43a0e6aa437c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
-        }
+        },
+        "id": "ZkajsSFs19xr",
+        "outputId": "7fb4316e-7683-4846-904c-43a0e6aa437c"
       },
       "execution_count": 43,
       "outputs": [
@@ -1534,6 +1543,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "It turns out the outlier has to do with if the phone has TikTok installed. TikTok data included the outlier as that is what made it so expensive. Phone with TikTok downloaded (as said in their title), are worth more than other phones. The value of TikTok is due to TikTok ban that is looming.\n"
+      ],
+      "metadata": {
+        "id": "KmAxVcoq7d4I"
+      }
     },
     {
       "cell_type": "code",
@@ -1557,12 +1575,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "MC1bgGId2zP4",
-        "outputId": "437594c5-0558-41bd-adde-a113c42af061",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
-        }
+        },
+        "id": "MC1bgGId2zP4",
+        "outputId": "437594c5-0558-41bd-adde-a113c42af061"
       },
       "execution_count": 45,
       "outputs": [
@@ -1581,9 +1599,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Pixels have the highest average price of a phone brand with iPhone coming in second. This is after removing large outliers in price.\n",
-        "\n",
-        "It turns out the outlier has to do with if the phone has TikTok installed"
+        "Unlocked phones (phones that can be used with any carrier) are worth more then phones that don't specfically say this. This would be because unlocked phones can be used by anyone, which means demand and therefore price would be higher."
       ],
       "metadata": {
         "id": "2spWbvXP3Ssk"
@@ -1656,12 +1672,12 @@
         "print(df.loc[:,['log_price','log_storage']].corr())"
       ],
       "metadata": {
-        "id": "IxwU5jXmzA1z",
-        "outputId": "435469be-207e-4a2e-a071-c4f39c6d4470",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 611
-        }
+        },
+        "id": "IxwU5jXmzA1z",
+        "outputId": "435469be-207e-4a2e-a071-c4f39c6d4470"
       },
       "execution_count": 32,
       "outputs": [
@@ -1700,8 +1716,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "As storage goes up, price goes up.\n",
-        "iphone seems to be effected less by this trend though."
+        "As storage goes up, price goes up. This makes sense because having more storage is a valuable asset to any phone. People would be willing to pay more for more storage.\n"
       ],
       "metadata": {
         "id": "UpuU4jY10iu0"
@@ -1713,12 +1728,12 @@
         "df.loc[:,['tik_tok','brand']].groupby('brand').describe()"
       ],
       "metadata": {
-        "id": "UASnpHnd0qHB",
-        "outputId": "47eefd0e-6cf1-4d3a-c924-93e4c1451b3c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 394
-        }
+        },
+        "id": "UASnpHnd0qHB",
+        "outputId": "47eefd0e-6cf1-4d3a-c924-93e4c1451b3c"
       },
       "execution_count": 33,
       "outputs": [
@@ -2113,13 +2128,15 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Overall, the most interesting story about the data is the perceived value of TikTok by the phone sellers on Craiglist. Because of the ban (which has now been delayed) sellers believed they could upcharge for having TikTok on their phones. A larger percentage of Android phones have the TikTok description in their title. This could be because Androids are one of the cheapest phones (according to the Craigslist data), so sellers bought cheap androids and hoped they can download TikTok and sell at an outrageous mark up.\n",
+        "\n",
+        "The rest of the data was not surprising as iPhones seemed very popular on the market and were one of the most expensive brands."
+      ],
       "metadata": {
-        "id": "wVSW-OLG03yh"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "bCxVvAu250tn"
+      }
     }
   ],
   "metadata": {
